# paper-football

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
include/: Makefile.am  insider.h  paper-football.h  parser.h
m4/: valgrind.m4
sources/: Makefile.am  calc-hash.awk  game.c  geometry.c  main.c  mcts-ai.c  parser.c  random-ai.c  utils.c
validation/: Makefile.am  insider.c  validation.sh.in
